run push() in parallel and add two archives to UI page

--- a/archivenow/templates/index.html
+++ b/archivenow/templates/index.html
@@ -124,6 +124,18 @@ input[type=submit] {
   opacity: 0;
 }
 
+.img5{
+
+  width: 13px;
+  opacity: 0;
+}
+
+.img6{
+
+  width: 13px;
+  opacity: 0;
+}
+
 .img4{
 
   width: 13px;
@@ -151,6 +163,8 @@ input[type=submit] {
     <input type="checkbox" id="choice-archive1" checked > Internet Archive <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img1" id="img1"> <br>
     <input type="checkbox" id="choice-archive2" checked > Archive.is       <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img2" id="img2"> <br>
     <input type="checkbox" id="choice-archive3" checked > WebCite          <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img3" id="img3"> <br>
+    <input type="checkbox" id="choice-archive5" checked > Archive.st <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img5" id="img5"> <br>
+    <input type="checkbox" id="choice-archive6" checked > Megalodon.jp <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img6" id="img6"> <br>
     <input type="checkbox" id="choice-archive4" > Perma.cc                 <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img4" id="img4">
     <div class="reveal-if-active">
       <label for="perma_cc_api">Permaa.cc requires <a href="https://perma.cc/settings/tools" target="_blank"> an API Key </a></label>
@@ -199,6 +213,20 @@ input[type=submit] {
         document.getElementById('choice-archive3').checked = false
      }
   }
+  if (localStorage.getItem("check_archive_5") !== null){
+      if (localStorage.getItem("check_archive_5") == 'true'){
+        document.getElementById('choice-archive5').checked = true
+      }else{
+        document.getElementById('choice-archive5').checked = false
+     }
+  }
+  if (localStorage.getItem("check_archive_6") !== null){
+      if (localStorage.getItem("check_archive_6") == 'true'){
+        document.getElementById('choice-archive6').checked = true
+      }else{
+        document.getElementById('choice-archive6').checked = false
+     }
+  }
   if (localStorage.getItem("check_archive_4") !== null){
       if (localStorage.getItem("check_archive_4") == 'true'){
         document.getElementById('choice-archive4').checked = true
@@ -219,6 +247,8 @@ input[type=submit] {
             localStorage.setItem("check_archive_1", false);
             localStorage.setItem("check_archive_2", false);
             localStorage.setItem("check_archive_3", false);
+            localStorage.setItem("check_archive_5", false);
+            localStorage.setItem("check_archive_6", false);
             localStorage.setItem("check_archive_4", false);
 
 
@@ -231,6 +261,12 @@ input[type=submit] {
                     }
                     if(table.rows[r].cells[0].innerHTML.indexOf("http://archive.is") !== -1){
                       arr.push("is");
+                    }
+                    if(table.rows[r].cells[0].innerHTML.indexOf("https://archive.st") !== -1){
+                      arr.push("st");
+                    }
+                    if(table.rows[r].cells[0].innerHTML.indexOf("http://megalodon.jp") !== -1){
+                      arr.push("mg");
                     }
                     if(table.rows[r].cells[0].innerHTML.indexOf("http://www.webcitation.org") !== -1){
                       arr.push("wc");
@@ -343,6 +379,62 @@ input[type=submit] {
                       });
                   }
                   localStorage.setItem("check_archive_3", true);
+            }
+            if (document.getElementById('choice-archive5').checked == true){
+                  
+                  selected_archives = selected_archives + 1;
+                  
+                  if(arr.indexOf("st") == -1){
+                      document.getElementById('img5').style.opacity = 1
+                      $.ajax({
+                          type: "GET",
+                          url: "st/"+document.getElementById('text_url').value,
+                          success: function(json) {
+                              if (validateURL(json['results'][0]) == true){
+                                  var table=document.getElementById("results");
+                                  var row=table.insertRow(-1);
+                                  var cell1=row.insertCell(0);
+                                  var cell2=row.insertCell(1);
+                                  cell1.innerHTML='<a href="https://archive.st/" target="_blank"> Archive.st </a>'
+                                  cell2.innerHTML='<a href="'+json['results'][0]+'" target="_blank"> '+json['results'][0]+' </a>'
+                                  document.getElementById('results').style.opacity = 1
+                                  document.getElementById('img5').style.opacity = 0
+                              }
+                          },
+                          complete: function(){
+                            document.getElementById('img5').style.opacity = 0
+                          }
+                      });
+                  }
+                  localStorage.setItem("check_archive_5", true);
+            }
+            if (document.getElementById('choice-archive6').checked == true){
+                  
+                  selected_archives = selected_archives + 1;
+                  
+                  if(arr.indexOf("mg") == -1){
+                      document.getElementById('img6').style.opacity = 1
+                      $.ajax({
+                          type: "GET",
+                          url: "mg/"+document.getElementById('text_url').value,
+                          success: function(json) {
+                              if (validateURL(json['results'][0]) == true){
+                                  var table=document.getElementById("results");
+                                  var row=table.insertRow(-1);
+                                  var cell1=row.insertCell(0);
+                                  var cell2=row.insertCell(1);
+                                  cell1.innerHTML='<a href="http://megalodon.jp" target="_blank"> Megalodon.jp </a>'
+                                  cell2.innerHTML='<a href="'+json['results'][0]+'" target="_blank"> '+json['results'][0]+' </a>'
+                                  document.getElementById('results').style.opacity = 1
+                                  document.getElementById('img6').style.opacity = 0
+                              }
+                          },
+                          complete: function(){
+                            document.getElementById('img6').style.opacity = 0
+                          }
+                      });
+                  }
+                  localStorage.setItem("check_archive_6", true);
             }
             if (document.getElementById('choice-archive4').checked == true){
 
