WebCite is disabled

--- a/archivenow/templates/index.html
+++ b/archivenow/templates/index.html
@@ -162,7 +162,7 @@ input[type=submit] {
     <div id="choices2">
     <input type="checkbox" id="choice-archive1" checked > Internet Archive <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img1" id="img1"> <br>
     <input type="checkbox" id="choice-archive2" checked > Archive.is       <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img2" id="img2"> <br>
-    <input type="checkbox" id="choice-archive3" checked > WebCite          <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img3" id="img3"> <br>
+    <input type="checkbox" id="choice-archive3" > WebCite          <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img3" id="img3"> <br>
     <input type="checkbox" id="choice-archive5" > Archive.st <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img5" id="img5"> <br>
     <input type="checkbox" id="choice-archive6" checked > Megalodon.jp <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img6" id="img6"> <br>
     <input type="checkbox" id="choice-archive4" > Perma.cc                 <img src={{ url_for('static', filename = "ajax-loader.gif") }} class="img4" id="img4">
